implement spring jpa with entity manager and JpaRepository interface

--- a/04-spring-jpa/src/main/resources/application.properties
+++ b/04-spring-jpa/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=first-project
 # konfigurimi DB
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=student_tracker;encrypt=true;trustServerCertificate=true
 # windows auth pa user dhe password vetem e komentoni user dhe password
 # spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=student_tracker;integratedSecurity=true;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=student_tracker;encrypt=true;trustServerCertificate=true
+# Provide the correct SQL Server username and password
 spring.datasource.username=sa
 spring.datasource.password=Strong!Passw0rd1
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
