add grades and movies pages with user information display

--- a/04-spring-jpa/src/main/resources/application.properties
+++ b/04-spring-jpa/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=student_track
 spring.datasource.username=sa
 spring.datasource.password=Strong!Passw0rd1
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
