continue with authorization and add docker compose file

--- a/07-spring-security/src/main/resources/application.properties
+++ b/07-spring-security/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=spring-security
+# Tregoni qe po lidheni me Postgre SQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_security
+# username
+spring.datasource.username=user
+# password
+spring.datasource.password=secret
+# Let Hibernate create/update tables from our entities (code-first)
+spring.jpa.hibernate.ddl-auto=update
+# Show SQL in console (for learning)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
